--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,12 +3,29 @@
 # Change this file for any custom CSS.
 ---
 
+// Import partials from `sass_dir` (defaults to `_sass`)
+@import "syntax";
+@import "variables";
+
 /* We need to add display:inline in order to align the '>>' of the 'read more' link */
 .post-excerpt p {
 	display:inline;
 }
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-	"syntax"
-;
+.no-cover.main-header {
+	//background: -webkit-linear-gradient(271deg, #DD72FF 0%, #93F4FF 100%);
+   //background: -o-linear-gradient(271deg, #DD72FF 0%, #93F4FF 100%);
+   //background: linear-gradient(-180deg, #DD72FF 0%, #93F4FF 100%);
+	background-color: $gPurpleDark2;
+}
+
+.no-cover{
+	.page-title{
+		color: white;
+		font-size: 63px;
+	}
+
+	.page-description {
+		color: white;
+	}
+}
