--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -176,7 +176,7 @@ html {
 body {
     height: 100%;
     max-height: 100%;
-    font-family: "Merriweather", serif;
+    font-family: Open Sans, sans-serif;
     letter-spacing: 0.01rem;
     font-size: 1.8rem;
     line-height: 1.75em;
@@ -235,6 +235,7 @@ h6 {
 a {
     color: #4A4A4A;
     transition: color ease 0.3s;
+    text-decoration: none;
 }
 
 a:hover {
@@ -672,9 +673,9 @@ margin on the iframe, cause it breaks stuff. */
 .page-description {
     margin: 0;
     font-size: 2rem;
-    line-height: 1.5em;
+    line-height: 2em;
     font-weight: 400;
-    font-family: "Merriweather", serif;
+    font-family: Open Sans, sans-serif;
     letter-spacing: 0.01rem;
     color: rgba(255,255,255,0.8);
 }
