--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,3 +1,4 @@
 //////////////////////////// GRADIENT COLORS /////////////////////////////
 $gPurpleDark1: #6e3ec8;
 $gPurpleDark2: #7058d1;
+$gPurpleDark3: #5f4488;
