--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -37,6 +37,10 @@
 //==================================================
 // 3. HEADER
 //==================================================
+.main-header {
+	text-align: inherit;
+}
+
 .inner {
 	padding-bottom: 10px;
 }
@@ -133,7 +137,7 @@
 	.main-header {
 		.inner {
 			width: 85%;
-			padding-top: 10px;
+			padding-top: 12px;
 		}
 	}
 }
