--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -112,32 +112,50 @@
 @media only screen and (max-width: 550px) {
 	.main-header {
 		.inner {
-			width: 100%
+			width: 100%;
+    		text-align: center;
+    		padding-bottom: 23px;
 		}
 	}
 	.no-cover {
 		.page-title {
-			font-size: 65px;
+			font-size: 66px;
 		}
 		.page-description {
-			font-size: 21.3px;
+			font-size: 20.8px;
 		}
+	}
+	.no-cover.main-header {
+   	min-height: 160px;
+   	max-height: 16%;
+	}
+	.vertical {
+   	display: table-row-group;
+   	vertical-align: middle;
 	}
 }
 
 @media only screen and (max-width: 460px) {
+	.vertical {
+   	display: table-row-group;
+   	vertical-align: middle;
+}
 	.no-cover {
 		.page-title {
-			font-size: 50px;
+			font-size: 54px;
 		}
 		.page-description {
-			font-size: 16.2px;
+			font-size: 16.9px;
 		}
+	}
+	.main-header.no-cover {
+		height: 22%;
 	}
 	.main-header {
 		.inner {
-			width: 85%;
-			padding-top: 12px;
+			width: 100%;
+    		text-align: center;
+    		padding-top: 0px;
 		}
 	}
 }
