--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,7 +33,10 @@
 //==================================================
 // 2. NAVIGATION
 //==================================================
-
+.mobile {
+   margin: 21px 0px 45px 21px;
+   text-align: left;
+}
 //==================================================
 // 3. HEADER
 //==================================================
@@ -59,6 +62,10 @@
 	//background-color: $gPurpleDark3;
 }
 
+.vertical {
+    display: table-row-group;
+}
+
 .no-cover {
 	.page-title {
 		color: white;
@@ -73,12 +80,14 @@
 
 .no-cover.main-header {
 	min-height: 160px;
-	max-height: 32%;
+	max-height: 28%;
 }
 
 .main-header {
 	.inner {
 		width: 100%;
+		text-align: center;
+		top: -49px;
 	}
 }
 
@@ -112,8 +121,12 @@
 @media only screen and (max-width: 550px) {
 	.main-header {
 		.inner {
-			width: 100%
+			width: 100%;
+			top: -49px;
 		}
+	}
+	.inner {
+   	padding-bottom: 9px;
 	}
 	.no-cover {
 		.page-title {
@@ -122,6 +135,13 @@
 		.page-description {
 			font-size: 21.3px;
 		}
+	}
+	.no-cover.main-header {
+   	min-height: 160px;
+   	max-height: 26%;
+	}
+	.mobile {
+		margin: 21px 0px 55px 21px;
 	}
 }
 
