Added about.html / Fixed last issue for header on iPhone 7 Plus

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,14 +31,14 @@
 }
 
 //==================================================
-// 2. NAVIGATION
+// 2. NAVIGATION -----------------------------------
 //==================================================
 .mobile {
    margin: 21px 0px 45px 21px;
    text-align: left;
 }
 //==================================================
-// 3. HEADER
+// 3. HEADER ---------------------------------------
 //==================================================
 .main-header {
 	text-align: inherit;
@@ -92,7 +92,7 @@
 }
 
 //==================================================
-// 4. POSTS
+// 4. POSTS ----------------------------------------
 //==================================================
 
 .post {
@@ -109,7 +109,22 @@
 }
 
 //==================================================
-// 5. MEDIA QUERIES
+// 5. ABOUT ----------------------------------------
+//==================================================
+
+.aboutContainer {
+   width: 62%;
+   margin: auto;
+	padding: 26px 33px 33px 33px;
+   box-shadow: 0px 0px 23px 0px rgba(0, 0, 0, 0.1);
+}
+
+.post-title {
+	color: $postHeader;
+}
+
+//==================================================
+// 6. MEDIA QUERIES --------------------------------
 //==================================================
 
 @media only screen and (max-width: 900px) {
@@ -152,10 +167,10 @@
 }
 	.no-cover {
 		.page-title {
-			font-size: 54px;
+			font-size: 52px;
 		}
 		.page-description {
-			font-size: 16.9px;
+			font-size: 16.7px;
 		}
 	}
 	.main-header.no-cover {
@@ -166,7 +181,11 @@
 			width: 100%;
     		text-align: center;
     		padding-top: 0px;
+			top: -26px;
 		}
+	}
+	.mobile {
+		margin: 21px 0px 28px 21px;
 	}
 }
 
