--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -24,7 +24,7 @@ Content of mobile menu
 -----------------------------------------------*/
 .mobile {
    //padding:40px;
-   margin: 21px 0 0 21px;
+   //margin: 21px 0 0 21px;
 }
 /*-----------------------------------------------
 LABEL
@@ -94,7 +94,7 @@ NAV
    max-height: 0;
    max-width: 0;
    overflow: hidden;
-   transition: max-height 1s linear, max-width 0.8s linear;
+   transition: max-height 0.5s linear, max-width 0.5s linear;
 }
 
 .nav__item {
