--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,4 +1,9 @@
-//////////////////////////// GRADIENT COLORS /////////////////////////////
+//================================================ 1.GRADIENTS
+
 $gPurpleDark1: #6e3ec8;
 $gPurpleDark2: #7058d1;
 $gPurpleDark3: #5f4488;
+
+//================================================ 2.TYPOGRAPHY
+
+$postHeader: #3b3c41;
