--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -180,8 +180,8 @@
 		.inner {
 			width: 100%;
     		text-align: center;
-    		padding-top: 25px;
-			top: -26px;
+    		//padding-top: 25px;
+			top: -7px;
 		}
 	}
 	.mobile {
