--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -181,7 +181,8 @@
 			width: 100%;
     		text-align: center;
     		//padding-top: 25px;
-			top: -7px;
+			//top: -7px;
+			margin-bottom: -18px;
 		}
 	}
 	.mobile {
