--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -180,7 +180,7 @@
 		.inner {
 			width: 100%;
     		text-align: center;
-    		//padding-top: 25px;
+    		padding-top: 25px;
 			//top: -7px;
 			margin-bottom: -18px;
 		}
