--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -113,7 +113,7 @@
 //==================================================
 
 .aboutContainer {
-   width: 40%;
+   width: 850px;
    margin: auto;
 	padding: 26px 33px 33px 33px;
    box-shadow: 0px 0px 23px 0px rgba(0, 0, 0, 0.1);
@@ -123,9 +123,22 @@
 	color: $postHeader;
 }
 
+.aboutContainer {
+	.post-content{
+		font-size: 23px;
+		line-height: 35px;
+	}
+}
+
 //==================================================
 // 6. MEDIA QUERIES --------------------------------
 //==================================================
+
+@media only screen and (max-width: 1000px) {
+	.aboutContainer {
+	   width: 80%;
+	}
+}
 
 @media only screen and (max-width: 900px) {
 	.no-cover.main-header {
@@ -158,6 +171,12 @@
 	.mobile {
 		margin: 21px 0px 55px 21px;
 	}
+	.aboutContainer {
+		.post-content{
+			font-size: 20px;
+			line-height: 30px;
+		}
+	}
 }
 
 @media only screen and (max-width: 460px) {
@@ -188,6 +207,10 @@
 	.mobile {
 		margin: 21px 0px 28px 21px;
 	}
+	.aboutContainer{
+		width: 84%;
+		padding: 18px 16px 18px 21px;
+	}
 }
 
 @media only screen and (max-width: 380px) {
@@ -210,5 +233,15 @@
 	}
 	.inner {
 		margin: 0 auto;
+	}
+	.aboutContainer{
+		width: 86%;
+		padding: 14px 14px 10px 15px;
+	}
+	.aboutContainer {
+		.post-content {
+			font-size: 18px;
+			line-height: 29px;
+		}
 	}
 }
