Done for the Day / Thursday 6.22.17

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,6 @@
 //================================================ 1.GRADIENTS
 
-$gPurpleDark1: #6e3ec8;
+$gPurpleDark1: #8327f9;
 $gPurpleDark2: #7058d1;
 $gPurpleDark3: #5f4488;
 
