Added links to the about header, also changed purple for header color

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,6 @@
 //================================================ 1.GRADIENTS
 
-$gPurpleDark1: #8327f9;
+$gPurpleDark1: #9638ff;
 $gPurpleDark2: #7058d1;
 $gPurpleDark3: #5f4488;
 
