--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -64,10 +64,11 @@
 	//background: -webkit-linear-gradient(271deg, #FF69C1 0%, #9E6EFF 100%);
    //background: -o-linear-gradient(271deg, #FF69C1 0%, #9E6EFF 100%);
 	//background: linear-gradient(-1deg, #FF69C1 0%, #9E6EFF 100%);
-	background: -webkit-linear-gradient(271deg, #A44FFF 0%, #3db9ff 100%);
-   background: -o-linear-gradient(271deg, #A44FFF 0%, #3db9ff 100%);
-	background: linear-gradient(-1deg, #A44FFF 0%, #3db9ff 100%);
-		//background-color: $gPurpleDark2;
+	//background: -webkit-linear-gradient(271deg, #A44FFF 0%, #3db9ff 100%);
+   //background: -o-linear-gradient(271deg, #A44FFF 0%, #3db9ff 100%);
+	//background: linear-gradient(-1deg, #A44FFF 0%, #3db9ff 100%);
+	background-color: $gPurpleDark1;
+	//background-color: $gPurpleDark2;
 	//background-color: $gPurpleDark3;
 }
 
