--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -79,12 +79,13 @@
 .no-cover {
 	.page-title {
 		color: white;
-		font-size: 72px;
+		font-size: 98px;
+		margin: 10px 0 8px 0;
 	}
 
 	.page-description {
 		color: white;
-		font-size: 23.5px;
+		font-size: 19.2px;
 	}
 }
 
@@ -154,6 +155,10 @@
 	}
 }
 
+.page-title {
+	margin: 10px 0 13px 0;
+}
+
 @media only screen and (max-width: 900px) {
 	.no-cover.main-header {
 		padding: 0;
@@ -164,7 +169,8 @@
 	.main-header {
 		.inner {
 			width: 100%;
-			top: -49px;
+			top: -69px;
+    		margin-bottom: -30px;
 		}
 	}
 	.inner {
@@ -172,10 +178,10 @@
 	}
 	.no-cover {
 		.page-title {
-			font-size: 66px;
+			font-size: 93px;
 		}
 		.page-description {
-			font-size: 20.8px;
+			font-size: 18.2px;
 		}
 	}
 	.no-cover.main-header {
@@ -200,7 +206,7 @@
 }
 	.no-cover {
 		.page-title {
-			font-size: 52px;
+			font-size: 86px;
 		}
 		.page-description {
 			font-size: 16.7px;
@@ -215,7 +221,8 @@
     		text-align: center;
     		padding-top: 25px;
 			//top: -7px;
-			margin-bottom: -18px;
+			margin-bottom: -46px;
+			top: -70px;
 		}
 	}
 	.mobile {
@@ -230,15 +237,16 @@
 @media only screen and (max-width: 380px) {
 	.no-cover {
 		.page-title {
-			font-size: 52px;
+			font-size: 80px;
 		}
 	}
 	.no-cover .page-description {
-   	font-size: 16.5px;
+   	font-size: 15.5px;
 	}
 	.main-header {
 		.inner {
-			top: -42px;
+			top: -56px;
+			margin-bottom: -33px;
 		}
 	}
 	.main-header.no-cover {
