Edited about page content, changed link colors.

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -6,4 +6,5 @@ $gPurpleDark3: #5f4488;
 
 //================================================ 2.TYPOGRAPHY
 
-$postHeader: #3b3c41;
+$postHeader: #5b5d65;
+//$postHeader1: #3b3c41;
