--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -199,7 +199,7 @@ h4, h5, h6 {
     -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-    color: #2E2E2E;
+    color: $postHeader;
     line-height: 1.15em;
     margin: 0 0 0.4em 0;
     font-family: "Open Sans", sans-serif;
@@ -233,7 +233,7 @@ h6 {
 }
 
 a {
-    color: #4A4A4A;
+    color: #5b5d65;
     transition: color ease 0.3s;
     text-decoration: none;
 }
