--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,8 +1,10 @@
-//================================================ 1.GRADIENTS
+//================================================ 1.BASE
 
 $gPurpleDark1: #9638ff;
 $gPurpleDark2: #7058d1;
 $gPurpleDark3: #5f4488;
+
+$aqua: aqua;
 
 //================================================ 2.TYPOGRAPHY
 
