--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -46,7 +46,7 @@ a:hover {
 		transition: none;
 	}
 	a:hover {
-		color: $postHeader;
+		color: aqua;
 		font-weight: 600;
    }
 }
@@ -88,7 +88,7 @@ a:hover {
 	}
 
 	.page-description {
-		color: white;
+		color: $aqua;
 		font-size: 19.2px;
 	}
 }
