Working on site footer.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,10 +32,9 @@
          <a href="https://www.linkedin.com/in/chaims/"></a>
       </div>
          <section class = "reserved">
-            <a href="{{ site.baseurl }}">JstHack ©</a>
-             • All Rights Reserved // Made With Jekyll Using a Port of
+            <a href="https://cosminhaims.com">Cosmin Haims ©</a>
+             • All Rights Reserved // Made With Jekyll Using a Port of the theme
                 <a href="http://github.com/jsthack/jsthack.github.io">Kasper</a>
-                Theme
          </section>
       </div>
 <!--
