UI Changes / header, colors, code highlighting, + more

--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -14,7 +14,8 @@ cyan      #2aa198  strings, numbers
 green     #859900  operators, other keywords
 */
 
-.highlight pre { background-color: #002b36; color: #93a1a1 }
+//.highlight pre { background-color: #002b36; color: #93a1a1 }
+.highlight pre { background-color: #3a3b40; color: #93a1a1 }
 .highlight pre .lineno { color: #586e75 } /* Line Numbers */
 .highlight pre .c { color: #586e75 } /* Comment */
 .highlight pre .err { color: #93a1a1 } /* Error */
@@ -83,4 +84,4 @@ green     #859900  operators, other keywords
 .highlight pre .vc { color: #268bd2 } /* Name.Variable.Class */
 .highlight pre .vg { color: #268bd2 } /* Name.Variable.Global */
 .highlight pre .vi { color: #268bd2 } /* Name.Variable.Instance */
-.highlight pre .il { color: #2aa198 } /* Literal.Number.Integer.Long */
+.highlight pre .il { color: #2aa198 } /* Literal.Number.Integer.Long*/
