--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,10 +1,12 @@
 //================================================ 1.BASE
 
-$gPurpleDark1: #9638ff;
+//$gPurpleDark1: #9638ff;
+$gPurpleDark1: #7d45bb;
 $gPurpleDark2: #7058d1;
 $gPurpleDark3: #5f4488;
 
 $aqua: aqua;
+$white: white;
 
 //================================================ 2.TYPOGRAPHY
 
