--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1124,7 +1124,7 @@ body:not(.post-template) .post-title {
     padding: 6px;
     background: #fff;
     z-index: 2;
-    box-shadow: #E7EEF2 0 0 0 1px;
+    /*box-shadow: #E7EEF2 0 0 0 1px; COS */
 }
 
 .author-image .img {
