--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,6 +40,16 @@ body, p, h1, h2, h3, h4, h5, h6, a, li, ul {
 	hyphens: none;
 }
 
+h5 {
+	padding-bottom: 3px;
+}
+
+.highlight pre {
+	border-radius: 0px;
+	border: none;
+	border-left: 6px solid $gPurpleDark2;
+}
+
 //==================================================
 // 2. NAVIGATION -----------------------------------
 //==================================================
@@ -53,7 +63,7 @@ body, p, h1, h2, h3, h4, h5, h6, a, li, ul {
 		transition: none;
 	}
 	a:hover {
-		color: aqua;
+		color: $white;
 		font-weight: 600;
    }
 }
@@ -91,13 +101,13 @@ body, p, h1, h2, h3, h4, h5, h6, a, li, ul {
 
 .no-cover {
 	.page-title {
-		color: white;
+		color: $white;
 		font-size: 98px;
 		margin: 10px 0 8px 0;
 	}
 
 	.page-description {
-		color: $aqua;
+		color: $white;
 		font-size: 19.2px;
 	}
 }
