--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -362,6 +362,10 @@ h5 {
 		width: 84%;
 		padding: 18px 16px 18px 21px;
 	}
+	.post-footer p {
+		width: 339px;
+		margin: 0 auto;
+	}
 }
 
 //==================================================
