--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -363,9 +363,10 @@ h5 {
 		padding: 18px 16px 18px 21px;
 	}
 	.post-footer p {
-		width: 339px;
-		margin: 0px 0 0 -9px;
-		text-align: center;
+		width: 246px;
+		margin: 0 auto;
+		line-height: 20px;
+		padding: 8px 0px 0px 0px;
 	}
 }
 
