Added scroll to top Button / Changed index.js main file

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,6 +1,8 @@
-//================================================ 1.BASE
+//===============================
+// 1 // BASE THEME COLORS -------
+//===============================
 
-//$gPurpleDark1: #9638ff;
+$gPurpleDark0: #9638ff;
 $gPurpleDark1: #7d45bb;
 $gPurpleDark2: #7058d1;
 $gPurpleDark3: #5f4488;
@@ -8,7 +10,39 @@ $gPurpleDark3: #5f4488;
 $aqua: aqua;
 $white: white;
 
-//================================================ 2.TYPOGRAPHY
+//===============================
+// 2 // MATERIAL UI COLORS ------
+//===============================
+$purple1: #D1C4E9;
+$purple2: #B39DDB;
+$purple3: #9575CD;
+$purple4: #7E57C2;
+$purple5: #673AB7;
+$purple6: #5E35B1;
+
+$blue1: #90CAF9;
+$blue2: #64B5F6;
+$blue3: #42A5F5;
+$blue4: #2196F3;
+$blue5: #1E88E5;
+$blue6: #1976D2;
+$blue7: #448AFF;
+$blue8: #2979FF;
+$blue9: #2962FF;
+
+$gray1: #CFD8DC;
+$gray2: #B0BEC5;
+$gray3: #90A4AE;
+$gray4: #78909C;
+$gray5: #607D8B;
+$gray6: #546E7A;
+$gray7: #455A64;
+$gray8: #37474F;
+$gray9: #263238;
+
+//===============================
+// 3 // TYPOGRAPHY --------------
+//===============================
 
 $postHeader: #5b5d65;
-//$postHeader1: #3b3c41;
+$postHeader1: #3b3c41;
