--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-    <title>{{ site.name }} - {{ site.description }}</title>
-    <meta name="description" content="{{ site.meta_description}}" />
-
-    <meta name="HandheldFriendly" content="True" />
-    <meta name="MobileOptimized" content="320" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
-    <!-- Customisation  -->
-    <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
-    <script src="https://use.fontawesome.com/3d400cd0a9.js"></script>
-
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<!--==============================================-->
+   <title>{{ site.name }} - {{ site.description }}</title>
+   <meta name="description" content="{{ site.meta_description}}" />
+<!--==============================================-->
+   <meta name="HandheldFriendly" content="True" />
+   <meta name="MobileOptimized" content="320" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!--==============================================-->
+   <link rel="stylesheet" type="text/css" href="/assets/css/screen.css" />
+   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
+<!--=============== CUSTOMIZATION ================-->
+   <link rel="stylesheet" type="text/css" href="/assets/css/main.css" />
+   <script src="https://use.fontawesome.com/3d400cd0a9.js"></script>
 </head>
+<!--===================== BODY =========================-->
 <body class="{% if page.post_class %}{{page.post_class}}{% else %}home-template{% endif %}">
-
-    {{ content }}
-    <footer class="site-footer">
+   {{ content }}
+   <i class="fa fa-arrow-circle-up" aria-hidden="true"></i>
+<!--===================== FOOTER =========================-->
+   <footer class="site-footer">
       <div class="footerContent">
-      <div class="socialIcons">
-         <a href="https://github.com/jsthack"></a>
-         <a href="https://dribbble.com/CosminH"></a>
-         <a href="https://codepen.io/jsthack/"></a>
-         <a href="https://www.facebook.com/cosmin.haims.1"></a>
-         <a href="https://twitter.com/Cosmin_Haims"></a>
-         <a href="https://www.linkedin.com/in/chaims/"></a>
-      </div>
-         <section class = "reserved">
-            <a href="https://cosminhaims.com">Cosmin Haims ©</a>
-             • All Rights Reserved // Made With Jekyll Using a Port of the theme
-                <a href="http://github.com/jsthack/jsthack.github.io">Kasper</a>
+         <div class="socialIcons">
+            <a href="https://github.com/jsthack"></a>
+            <a href="https://dribbble.com/CosminH"></a>
+            <a href="https://codepen.io/jsthack/"></a>
+            <a href="https://www.facebook.com/cosmin.haims.1"></a>
+            <a href="https://twitter.com/Cosmin_Haims"></a>
+            <a href="https://www.linkedin.com/in/chaims/"></a>
+         </div>
+         <section class="reserved">
+            <a href="https://cosminhaims.com">Cosmin Haims ©</a> • All Rights Reserved // Made With Jekyll // <a href="http://github.com/jsthack/jsthack.github.io">JstHack Theme</a> Based Off Kasper
          </section>
       </div>
 <!--
@@ -47,25 +46,20 @@
         <a href="http://github.com/jsthack/jsthack.github.io">a Port of Kasper Theme</a>
       </section>
 -->
-    </footer>
+   </footer>
+<!--===================== JQUERY CDN =========================-->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+   <script type="text/javascript" src="./assets/js/jquery.fitvids.js"></script>
+   <script type="text/javascript" src="./assets/js/index.js"></script>
+<!--===================== GOOGLE ANALYTICS =========================-->
+   <script type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-    <script type="text/javascript" src="/assets/js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="/assets/js/jquery.fitvids.js"></script>
-    <script type="text/javascript" src="/assets/js/index.js"></script>
-
-    <!-- Google Analytics Tracking code -->
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', '{{ site.google_analytics }}']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
+      ga('create', 'UA-102062590-1', 'auto');
+      ga('send', 'pageview');
+   </script>
 </body>
 </html>
