--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -68,6 +68,22 @@ h5 {
    }
 }
 
+// SCROLL TO TOP ARROW
+.fa-arrow-circle-up {
+	font-size: 43px !important;
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	right: 30px;
+	z-index: 99;
+	color: $gray3;
+	cursor: pointer;
+
+	&:hover {
+		color: $gPurpleDark1;
+	}
+}
+
 //==================================================
 // 3. HEADER ---------------------------------------
 //==================================================
