--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,7 +24,7 @@
 @import "fonts_icons";
 
 //==================================================
-// 2. BASE STYLES ----------------------------------
+// 1. BASE STYLES ----------------------------------
 //==================================================
 // We need to add display:inline in order to align the '>>' of the 'read more' link
 
@@ -192,7 +192,7 @@ h5 {
 }
 
 //==================================================
-// 5. FOOTER ---------------------------------------
+// 6. FOOTER ---------------------------------------
 //==================================================
 
 .site-footer {
@@ -258,7 +258,7 @@ h5 {
 }
 
 //==================================================
-// 6. MEDIA QUERIES / SMALLER THAN 1000 px ---------
+// 7. MEDIA QUERIES / SMALLER THAN 1000 px ---------
 //==================================================
 
 @media only screen and (max-width: 1000px) {
@@ -272,7 +272,7 @@ h5 {
 }
 
 //==================================================
-// 7. MEDIA QUERIES / SMALLER THAN 900 px ----------
+// 8.1 MEDIA QUERIES / SMALLER THAN 900 px ----------
 //==================================================
 
 @media only screen and (max-width: 900px) {
@@ -282,7 +282,7 @@ h5 {
 }
 
 //==================================================
-// 8. MEDIA QUERIES / SMALLER THAN 670 px ----------
+// 8.2 MEDIA QUERIES / SMALLER THAN 670 px ----------
 //==================================================
 
 @media only screen and (max-width: 670px) {
@@ -292,7 +292,7 @@ h5 {
 }
 
 //==================================================
-// 8. MEDIA QUERIES / SMALLER THAN 600 px ----------
+// 8.3 MEDIA QUERIES / SMALLER THAN 600 px ----------
 //==================================================
 
 @media only screen and (max-width: 600px) {
@@ -304,7 +304,7 @@ h5 {
 }
 
 //==================================================
-// 8. MEDIA QUERIES / SMALLER THAN 550 px ----------
+// 8.4 MEDIA QUERIES / SMALLER THAN 550 px ----------
 //==================================================
 
 @media only screen and (max-width: 550px) {
@@ -342,7 +342,7 @@ h5 {
 }
 
 //==================================================
-// 8. MEDIA QUERIES / SMALLER THAN 460 px ----------
+// 8.5 MEDIA QUERIES / SMALLER THAN 460 px ----------
 //==================================================
 
 @media only screen and (max-width: 460px) {
@@ -387,7 +387,7 @@ h5 {
 }
 
 //==================================================
-// 8. MEDIA QUERIES / SMALLER THAN 380 px ----------
+// 8.6 MEDIA QUERIES / SMALLER THAN 380 px ----------
 //==================================================
 
 @media only screen and (max-width: 380px) {
